tdf#163876 ignore marked text generated from Command-` events

For some unknown reason, when using the standard macOS French
layout, pressing Command-` causes -[NSView interpretKeyEvents:]
to temporarily set and unset the marked text.

Command-` should only cycle through the application's windows
so ignore marked text changes from such key down events.

Change-Id: Ifeb4ad637d572b339d7b389466815bb60a4b3120
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/176652
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Tested-by: Jenkins
(cherry picked from commit 0c065c5e233044361713c0003dac6294a82a6e6e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/176653
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>