vcl/osx/salframeview.mm
@@ -2016,7 +2016,21 @@ static bool isMouseScrollWheelEvent( NSEvent *pEvent )
         aString = [[[NSAttributedString alloc] initWithString:aString] autorelease];
 
     // Reset cached state
+    BOOL bOldHasMarkedText = [self hasMarkedText];
     [self unmarkText];
+
+    // tdf#163876 ignore marked text generated from Command-` events
+    // For some unknown reason, when using the standard macOS French
+    // layout, pressing Command-` causes -[NSView interpretKeyEvents:]
+    // to temporarily set and unset the marked text.
+    // Command-` should only cycle through the application's windows
+    // so ignore marked text changes from such key down events.
+    if( !bOldHasMarkedText && mpLastEvent && [mpLastEvent type] == NSEventTypeKeyDown && [mpLastEvent keyCode] == 42 && ( [mpLastEvent modifierFlags] & ( NSEventModifierFlagCommand | NSEventModifierFlagOption | NSEventModifierFlagControl | NSEventModifierFlagShift ) ) == NSEventModifierFlagCommand )
+    {
+        NSString* pUnmodifiedString = [mpLastEvent charactersIgnoringModifiers];
+        if( pUnmodifiedString && ![pUnmodifiedString length] )
+            return;
+    }
 
     int len = [aString length];
     bool bReschedule = false;
